--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-sdk tools:overrideLibrary="com.google.android.libraries.places" />
 
     <application
         android:allowBackup="true"
@@ -22,10 +23,11 @@
             android:value="API_KEY" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.ongs.voluntariar.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Voluntariar">
+            android:theme="@style/Theme.Voluntariar"
+            tools:ignore="MissingClass">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
