--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+
+android.enableJetifier=true
+
+# Atualize a versão do Kotlin para a mais recente
+kotlin.version=2.1.0
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
@@ -21,3 +26,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+kotlin.incremental.usePreciseJavaTracking=true
